Move -XX:+UseCompactObjectHeaders from .mvn/jvm.config to Dockerfile
Move -XX:+UseCompactObjectHeaders from .mvn/jvm.config to Dockerfile,
because GitHub's automatic dependency submission apparently
uses Java older than 25 (the new flag is not recognized, which
breaks dependency submission). I couldn't find anywhere to specify
a Java version for dependnecy submission.

Eventually GitHub will probably update the bundled Java for
dependency submission and the flag can be moved back to
.mvn/jvm.config if desired.